feat(device_platform): 补充管理设备所属家长信息
